--- a/Markdown Notes/src/components/NoteEditor/NoteEditor.scss
+++ b/Markdown Notes/src/components/NoteEditor/NoteEditor.scss
@@ -1,4 +1,5 @@
 .note-editor {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -59,6 +60,7 @@
         transition: filter 0.3s ease;
         color: #edf6f9;
         background-color: #3a86ff;
+        margin-top: 10px;
 
         &:hover {
             filter: brightness(85%);
@@ -74,4 +76,35 @@
         margin-bottom: 0.5rem;
     }
     }
+
+    &__tips-button {
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background-color: black;
+        color: white;
+        font-size: 18px;
+        border: none;
+        cursor: pointer;
+    }
 }
+
+.markdown-tips {
+    margin-top: 20px;
+    background-color: #f5f5f5;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 0.9em;
+
+    ul {
+        padding-left: 20px;
+    }
+
+    li {
+        margin-bottom: 5px;
+    }
+}
+
