--- a/Markdown Notes/src/components/NoteItem/NoteItem.scss
+++ b/Markdown Notes/src/components/NoteItem/NoteItem.scss
@@ -1,4 +1,5 @@
 .note-item {
+    position: relative;
     background-color: #a2d2ff;
     padding: 1rem;
     border-radius: 8px;
@@ -10,17 +11,35 @@
         background-color: #74c0fc;
     }
 
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+    }
+
     &__title {
+        flex: 1;
         font-size: 1.2rem;
         font-weight: bold;
         color: #005f73;
         margin-bottom: 0.5rem;
+        word-break: break-word;
+    }
+
+    &__date {
+        font-size: 0.9em;
+        color: #005f73;
+        margin-bottom: 5px;
+        margin-left: 1rem;
+        white-space: nowrap;
     }
 
     &__content {
         font-size: 1rem;
         color: #005f73;
         margin-bottom: 0.5rem;
+        word-break: break-word;
     }
 
     &__buttons {
