--- a/to-do_list/src/components/filters/filters.scss
+++ b/to-do_list/src/components/filters/filters.scss
@@ -7,6 +7,7 @@
     border-radius: 8px;
     background-color: #f9f9f9;
     margin-bottom: 20px;
+    margin-top: 20px;
 
     h2 {
       text-align: center;
@@ -45,3 +46,12 @@
       }
     }
   }
+
+
+@media (max-width: 768px) {
+  .filters{
+    margin-top: 0;
+    padding-top: 0;
+    max-width: none;
+  }
+}
