--- a/to-do_list/src/components/taskForm/taskForm.scss
+++ b/to-do_list/src/components/taskForm/taskForm.scss
@@ -1,5 +1,6 @@
-// src/styles/index.scss
+
 .add-task-form {
+    margin: 0 auto;
     width: 100%;
     max-width: 400px;
     padding: 20px;
@@ -50,3 +51,9 @@
       }
     }
   }
+
+@media (max-width: 768px) {
+  .add-task-form{
+    max-width: none;
+  }
+}
