--- a/to-do_list/src/components/taskListItem/taskListItem.scss
+++ b/to-do_list/src/components/taskListItem/taskListItem.scss
@@ -1,8 +1,18 @@
-// src/styles/index.scss
+
 .task-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // position: relative;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    // padding: 15px;
+    // margin-bottom: 10px;
+    // background-color: #f9f9f9;
+    // border: 1px solid #ddd;
+    // border-radius: 8px;
+    // transition: background-color 0.3s ease;
+    position: relative;
+    display: grid;
+    grid-template: 1fr / 3fr 1fr;
     padding: 15px;
     margin-bottom: 10px;
     background-color: #f9f9f9;
@@ -12,6 +22,25 @@
 
     &:hover {
       background-color: #f1f1f1;
+    }
+
+    &__star__wrapper{
+      background-color: rgb(25, 42, 86);
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      border: 1px solid rgb(0, 0, 0);
+      border-radius: 100% ;
+    }
+
+    &__star{
+      font-size: 20px;
+      color:rgb(251, 255, 0);
     }
 
     .task-details {
@@ -32,7 +61,7 @@
       .task-meta {
         display: flex;
         gap: 15px;
-        font-size: 12px;
+        font-size: 15px;
         color: #777;
 
         .task-category {
@@ -54,6 +83,7 @@
       border-radius: 4px;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      height: 50px;
 
       &:hover {
         background-color: #d90000;
@@ -68,6 +98,8 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    height: 50px;
+    width: 125px;
 
     &:hover {
       background-color: #45a049;
@@ -77,4 +109,31 @@
   .task-actions {
     display: flex;
     gap: 10px;
+    justify-content: center;
+    align-items: flex-end;
   }
+
+
+/* Появление звездочки */
+.star-enter {
+  opacity: 0;
+  transform: scale(0.5);
+}
+
+.star-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 300ms ease-out, transform 300ms ease-out;
+}
+
+/* Исчезновение звездочки */
+.star-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.star-exit-active {
+  opacity: 0;
+  transform: scale(0.5);
+  transition: opacity 300ms ease-out, transform 300ms ease-out;
+}
