--- a/small_business_dashboard/src/components/Header/Header.scss
+++ b/small_business_dashboard/src/components/Header/Header.scss
@@ -10,7 +10,9 @@
     border: 3px solid rgb(34, 3, 121);
     border-radius: 15px;
 
-    &__logo {
+    &__logo a {
+      text-decoration: none;
+      cursor: pointer;
       font-size: 20px;
       font-weight: bold;
       background-color: #ffffff;
@@ -20,15 +22,9 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
-    // &__ul {
-    //   display: flex;
-    //   list-style: none;
-    //   margin: 0;
-    //   padding: 0;
-    //   gap: 20px;
-    // }
-
     .nav{
+        overflow: hidden;
+        box-sizing: border-box;
         display: inline-flex;
         position: relative;
         overflow: hidden;
@@ -37,75 +33,52 @@
         padding: 0 20px;
         border-radius: 40px;
         box-shadow: 0 10px 40px rgba(159, 162, 177, 0.8);
-    }
-
-    // &-item {
-    //   font-size: 18px;
-    //   cursor: pointer;
-    //   transition: color 0.3s ease;
-    //   color: white;
-    //   text-decoration: none;
-    //   font-size: 25px;
-
-    //   &:hover {
-    //     color: #f0e68c;
-    //   }
-    // }
-
-    .nav-item {
-        color: #83818c;
-        padding: 20px;
-        text-decoration: none;
-        transition: 0.3s;
-        margin: 0 6px;
-        z-index: 1;
-        font-family: "DM Sans", sans-serif;
-        font-weight: 500;
-        position: relative;
-
-        &:before {
-          content: "";
-          position: absolute;
-          bottom: -6px;
-          left: 0;
-          width: 100%;
-          height: 5px;
-          background-color: #dfe2ea;
-          border-radius: 8px 8px 0 0;
-          opacity: 0;
+        &-item {
+          color: #83818c;
+          padding: 20px;
+          text-decoration: none;
           transition: 0.3s;
+          margin: 0 6px;
+          z-index: 1;
+          font-family: "DM Sans", sans-serif;
+          font-weight: 500;
+          position: relative;
+
+          &:before {
+            content: "";
+            position: absolute;
+            bottom: -6px;
+            left: 0;
+            width: 100%;
+            height: 5px;
+            background-color: #dfe2ea;
+            border-radius: 8px 8px 0 0;
+            opacity: 0;
+            transition: 0.3s;
+          }
         }
-      }
-    .is-active{
-        color:#1e90ff;
-        scale: 1.3;
+        &-item:not(.is-active):hover:before {
+          opacity: 1;
+          bottom: 0;
+        }
+        &-item:not(.is-active):hover {
+          color: black;
+          scale: 1.3;
+        }
+        &-indicator {
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          height: 4px;
+          height: 5px;
+          z-index: 1;
+          border-radius: 8px 8px 0 0;
+          background-color: #1e90ff;
+        }
     }
 
-      .nav-item:not(.is-active):hover:before {
-        opacity: 1;
-        bottom: 0;
-      }
-
-      .nav-item:not(.is-active):hover {
-        color: black;
-        scale: 1.3;
-      }
-
-      .nav-indicator {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: 4px;
-        transition: 0.4s;
-        height: 5px;
-        z-index: 1;
-        border-radius: 8px 8px 0 0;
-        background-color: #1e90ff;
-      }
-
-      @media (max-width: 580px) {
-        .nav {
-          overflow: auto;
-        }
-      }
+    .is-active{
+      color:#1e90ff;
+      scale: 1.3;
+    }
   }
