--- a/small_business_dashboard/src/components/LoginForm/LoginForm.scss
+++ b/small_business_dashboard/src/components/LoginForm/LoginForm.scss
@@ -7,7 +7,7 @@
     height: 100vh;
 
     &__form {
-        padding: 65px 20px;
+        padding: 65px 40px;
         width: 500px;
         max-height: 500px;
         display: flex;
@@ -26,21 +26,40 @@
     }
 
     &__input {
+        box-sizing: border-box;
         padding: 0.5rem;
-        width: 80%;
-      }
+        width: 100%;
+    }
 
-    &__label-chekbox{
-        margin-left: 6px;
-        color: rgb(228, 228, 228);
+    &__field{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__checkbox-container {
+        margin: 10px 0;
+        display: flex;
+        align-items: center;
+        input{
+            margin-right: 5px;
+        }
+    }
+
+    &__checkbox-container label {
+        font-size: 14px;
+        color: white;
         cursor: pointer;
     }
 
 
 
+
+
     &__button {
         padding: 0.5rem;
-        width: 80%;
+        width: 100%;
         background-color: #007bff;
         color: #fff;
         border: none;
@@ -56,9 +75,48 @@
     &__forgot-password{
         color: rgb(228, 228, 228);
         text-decoration: none;
+        background: none;
+        border: none;
+        padding: 0;
         &:hover{
+            background: none;
+            border: none;
             color: white;
         }
     }
+
+    &__register-link {
+        color: white;
+        margin-top: 10px;
+        text-align: center;
+        align-self: flex-start;
+        a {
+          color: rgb(228, 228, 228);
+          text-decoration: none;
+
+          &:hover {
+            color: white;
+          }
+        }
+    }
+    &__success {
+        color: #2ecc71;
+        font-size: 14px;
+        margin-bottom: 10px;
+        font-weight: bold;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    }
+
+    &__error {
+        color: #ff4d4f;
+        background-color: #fff1f0;
+        border: 1px solid #ffa39e;
+        padding: 10px;
+        border-radius: 5px;
+        margin-bottom: 15px;
+        font-size: 14px;
+        text-align: center;
+    }
+
 }
 
