--- a/brawltracker/src/styles/index.scss
+++ b/brawltracker/src/styles/index.scss
@@ -5,7 +5,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  background-color: #121212;
+  background-color: #1a1a2e;
   color: #e0e0e0;
   line-height: 1.6;
 }
